--- a/package.json
+++ b/package.json
@@ -2,15 +2,17 @@
   "name": "social-network-api",
   "version": "1.0.0",
   "description": "",
-  "main": "server.js",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-
   "author": "",
   "license": "MIT",
   "dependencies": {
     "express": "^4.18.2",
     "mongoose": "^8.1.1"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.3"
   }
 }
